--- a/requirements.txt
+++ b/requirements.txt
@@ -24,12 +24,14 @@ networkx==3.2.1
 numba==0.59.1
 numpy==1.26.4
 packaging==24.0
+pandas==2.2.2
 pillow==10.3.0
 platformdirs==4.2.0
 pooch==1.8.1
 pycparser==2.22
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+pytz==2024.1
 requests==2.31.0
 scikit-learn==1.4.2
 scipy==1.13.0
@@ -43,5 +45,6 @@ torch==2.2.2+cpu
 torchaudio==2.2.2+cpu
 torchvision==0.17.2+cpu
 typing_extensions==4.11.0
+tzdata==2024.1
 urllib3==2.2.1
 vad==1.0.2
